--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -13,11 +13,12 @@
     }
 }
 @keyframes neon-box {
-    from {box-shadow:0 0 6px rgba(202,228,225,0.92),0 0 30px rgba(202,228,225,0.34),0 0 12px rgba(30,132,242,0.52),0 0 21px rgba(30,132,242,0.92),0 0 34px rgba(30,132,242,0.78),0 0 54px rgba(30,132,242,0.92);
+    from {box-shadow: 0 0 6px rgba(202, 228, 225, 0.92),0 0 24px rgba(202, 228, 225, 0.34), 0 0 9.6px rgba(30, 132, 242, 0.52), 0 0 16.8px rgba(30, 132, 242, 0.92), 0 0 27.2px rgba(30, 132, 242, 0.78), 0 0 43.2px rgba(30, 132, 242, 0.92);
     }
-    to {box-shadow:0 0 6px rgba(202,228,225,0.98),0 0 30px rgba(202,228,225,0.42),0 0 12px rgba(30,132,242,0.58),0 0 22px rgba(30,132,242,0.84),0 0 38px rgba(30,132,242,0.88),0 0 60px rgba(30,132,242,1);
+    to {box-shadow: 0 0 6px rgba(202, 228, 225, 0.98), 0 0 24px rgba(202, 228, 225, 0.42), 0 0 9.6px rgba(30, 132, 242, 0.58), 0 0 17.6px rgba(30, 132, 242, 0.84), 0 0 30.4px rgba(30, 132, 242, 0.88), 0 0 48px rgba(30, 132, 242, 1);
     }
 }
+
 @media (prefers-reduced-motion: reduce) {
     /* Remove all animations, transitions and smooth scroll
     for people that prefer not to see them */
@@ -60,6 +61,11 @@
         "three four four five";
     }
 }
+@media screen and (max-width: 35em) {
+    #tasten-steuerung {
+    display:none;
+    }
+}
 body::-webkit-scrollbar {
 /* Scrollleiste ausblenden */
     background-color: #000;
@@ -71,7 +77,7 @@ header::after {
     content: "";
     display: block;
 }
-header a {color: var(--neon-blue);text-decoration: none;}
+header a {color: var(--laser-blue);text-decoration: none;}
 header a:hover, header a:focus {
     animation: neon .08s ease-in-out infinite alternate;
     color: var(--neon-pink);
@@ -86,6 +92,7 @@ header a:hover, header a:focus {
 }
 .menu-list a {
     border-bottom-left-radius: 0.35rem;
+    transform: scaleY(1.2);
     color: var(--matrix-green);
     display: block;
     font-family: 'Sarpanch', sans-serif;
@@ -104,18 +111,16 @@ header a:hover, header a:focus {
 .menu-list[data-state="closed"] {
     display: none;
 }
-.menu-icon,.menu-icon::before,.menu-icon::after {
-     background-color: var(--neon-blue);
+.menu-icon,
+.menu-icon::before,
+.menu-icon::after {
+     background-color: var(--laser-blue);
      border-radius: 2px;
      content: "";
      display: block;
      height: 3px;
      transition: all ease-in-out 400ms;
      width: 20px;
-     box-shadow:
-          rgba(0, 240, 240, 0.4) 0px 2px 4px,
-          rgba(0, 240, 240, 0.3) 0px 7px 13px -3px,
-          rgba(0, 240, 240, 0.2) 0px -3px 0px inset;
 }
 .menu-icon::before {
      transform: translateY(-6px);
@@ -125,10 +130,14 @@ header a:hover, header a:focus {
 }
 [aria-expanded="true"] .menu-icon {
      transform: rotate(45deg);
+    animation: neon-box .08s ease-in-out infinite alternate;
 }
 [aria-expanded="true"] .menu-icon::before {
      opacity: 0;
+    animation: neon-box .08s ease-in-out infinite alternate;
 }
 [aria-expanded="true"] .menu-icon::after {
-     transform: translateY(-3px) rotate(-90deg);
-}
+    transform: translateY(-3px) rotate(-90deg);
+    animation: neon-box .08s ease-in-out infinite alternate;
+},
+
