--- a/assets/css/basic.css
+++ b/assets/css/basic.css
@@ -8,22 +8,42 @@ url('../fonts/sarpanch-v11-latin-regular.ttf')
 /* Safari, Android, iOS */ format('truetype'),
 url('../fonts/sarpanch-v11-latin-regular.svg#Sarpanch') /* Legacy iOS */ format('svg');
 }
+@font-face {
+font-family:'c64-mono';font-style:normal;src:
+url('../fonts/C64_Pro_Mono-STYLE.woff2')
+/* Super Modern Browsers */ format('woff2'),
+url('../fonts/C64_Pro_Mono-STYLE.woff')
+/* Modern Browsers */ format('woff'),
+url('../fonts/C64_Pro_Mono-STYLE.ttf')
+/* Safari, Android, iOS */ format('truetype');
+}
+@font-face {
+font-family:'c64-elite';font-style:normal;src:
+url('../fonts/C64_Elite_Mono_v1.0-STYLE.ttf')
+/* Safari, Android, iOS */ format('truetype');
+}
+@font-face {
+font-family:'c64-Pro';font-style:normal;src:
+url('../fonts/C64_Pro-STYLE.woff2')
+/* Super Modern Browsers */ format('woff2'),
+url('../fonts/C64_Pro-STYLE.woff')
+/* Modern Browsers */ format('woff'),
+url('../fonts/C64_Pro-STYLE.ttf')
+/* Safari, Android, iOS */ format('truetype');
+}
 header {
     align-items: center;
-    background-color: var(--vader-black);
-    color: var(--neon-blue);
+    background-color: var(--shadow-grey);
+    color: var(--laser-blue);
     display: flex;
     font-family: 'Sarpanch', sans-serif;
     font-size: 25px;
-    height: 50px;
+    height: 55px;
     justify-content: space-between;
     letter-spacing: 0.23rem;
     position: relative;
     text-shadow: 1.5px 2px #000;
-    box-shadow:
-        rgba(0, 240, 240, 0.4) 0px 2px 4px,
-        rgba(0, 240, 240, 0.3) 0px 7px 13px -3px,
-        rgba(0, 240, 240, 0.2) 0px -3px 0px inset;
+    box-shadow:var(--space-motion);
 }
 main {
     background-color: #000;
@@ -39,20 +59,17 @@ main {
     animation: neon .08s ease-in-out infinite alternate;
 }
 .menu-list {
-    background-color: var(--vader-black);
+    background-color: var(--shadow-grey);
     border-bottom-left-radius: 0.5rem;
     list-style: none;
     margin: 0;
     padding: 0;
     position: absolute;
     right: 0;
-    top: 49px;
+    top: 53px;
     transition: clip-path ease-in-out 300ms;
     z-index: 1;
-    box-shadow:
-        rgba(0, 240, 240, 0.4) 0px 2px 4px,
-        rgba(0, 240, 240, 0.3) 0px 7px 13px -3px,
-        rgba(0, 240, 240, 0.2) 0px -3px 0px inset;
+    box-shadow:var(--space-motion);
 }
 .menu-button {
     background-color: transparent;
@@ -60,10 +77,13 @@ main {
     border: 0;
     cursor: pointer;
     margin: 8px;
-    padding: 15px;
+    padding: 18px;
     position: absolute;
     right: 0;
     top: 0;
+}
+.menu-button:hover * {
+    background-color: var(--neon-pink);
 }
 .hidden-menu {
     clip-path: inset(50%);
@@ -71,10 +91,7 @@ main {
     height: 1px;
     overflow: hidden;
     position: absolute;
-    box-shadow:
-        rgba(0, 240, 240, 0.4) 0px 2px 4px,
-        rgba(0, 240, 240, 0.3) 0px 7px 13px -3px,
-        rgba(0, 240, 240, 0.2) 0px -3px 0px inset;
+    box-shadow:var(--space-motion);
     white-space: nowrap;
     width: 1px;
 }
@@ -104,7 +121,7 @@ main {
 .content {
     align-items: center;
     width: 100%;
-    background-color: var(--vader-black);
+    background-color: var(--shadow-grey);
     border-radius: 0.35rem;
     color:var(--pipi-white);
     justify-content: space-around;
@@ -112,30 +129,58 @@ main {
     padding: 0 1em 1em;
     position: relative;
     text-shadow: 1.5px 2px #000;
-    box-shadow:
-        rgba(0, 240, 240, 0.4) 0px 2px 4px,
-        rgba(0, 240, 240, 0.3) 0px 7px 13px -3px,
-        rgba(0, 240, 240, 0.2) 0px -3px 0px inset;
+    box-shadow:var(--space-motion);
 }
 q, cite, figcaption {
     font-size:small;
 }
-summary {cursor: pointer;}
-details {
-    background-color:#000;
-    border-radius: 0.5rem;
-    color: var(--matrix-green);
-    font-size: large;
-    font-weight: 50;
-    justify-content: center;
-    margin: 2em; padding: 1em;
+summary {
+    color:var(--laser-blue);
+    border-radius: 0.5em;
+    border:1px solid #000;
+    line-height: 1.6em;
+    cursor: pointer;
+    display:inline-block;
+    margin: 1em 0 2em;
+    text-align:match-parent;
+    font-family:'c64-Pro';
+    font-size: small;
+    width: min(max-content, max(min-content, stretch));
+    padding: 0.5em;
+    box-shadow:var(--ants-cry);
 }
-details[open] {
+summary:hover,
+summary:focus {
     animation: neon-box .08s ease-in-out infinite alternate;
+    color: var(--neon-pink);
+    border: none;
+    outline: none;
+    box-shadow: none;
+}
+details {
+    justify-content: space-around;
+    text-align:center;
+    width: min(max-content, max(min-content, stretch));
+    padding: 0 0 2em;
+}
+details[open] > summary {
+    color: var(--laser-blue);
+    animation: none;
+    box-shadow: none;
+}
+.quiz-answers {
+    animation: neon .08s ease-in-out infinite alternate;
+    color: var(--neon-pink);
+    width: 100%;
+    text-align:match-parent;
+    font-family:'c64-Pro';
+    width: min(max-content, max(min-content, stretch));
+    display:inline-block;
+    font-size: large;
 }
 footer {
     align-items: center;
-    background-color: var(--vader-black);
+    background-color: var(--shadow-grey);
     display: flex;
     justify-content: space-around;
     margin: 0;
