--- a/assets/css/basic.css
+++ b/assets/css/basic.css
@@ -109,7 +109,7 @@ header a:focus {
     padding: 0;
     position: absolute;
     right: 0;
-    top: 53px;
+    top: 54px;
     transition: clip-path ease-in-out 300ms;
     z-index: 1;
     box-shadow:var(--space-motion);
@@ -237,7 +237,7 @@ main {
 .content:nth-child(5) {grid-area: five;}
 .content h1 {
     animation: neon .08s ease-in-out infinite alternate;
-    color: var(--laser-blue);
+    color: var(--matrix-green);
     font-family: 'Sarpanch', sans-serif;
     width: 100%; text-align: center;
     letter-spacing: 0.28vw;
@@ -285,26 +285,29 @@ footer {
 footer .footer-container {
     display: flex;
     justify-content: space-between;
-    padding: 2vh 2vw 12vh;
+    padding: 2vh 5vw 12vh 3vw;
     vertical-align: middle;
     width: 100%;
+    height:100%;
 }
 .leftside-profil-icons,
 .rightside-site-features {
     display: flex;
+    justify-content: space-between;
     cursor: pointer;
-    margin:0;
 }
 .leftside-profil-icons > * {
     left: 0;
-    margin-right: 2vw;
+    margin-right: 3vw;
 }
 .rightside-site-features > * {
     right: 0;
-    margin-left: 2vw;
+    margin-left: 3vw;
 }
 footer #instagram-link {
     cursor: pointer;
+    width:30px;
+    height:30px;
 }
 footer #contact-email {
     animation: neon .08s ease-in-out infinite alternate;
