--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,30 +1,3 @@
-
-@keyframes clipPathCircleOpen {
-    0% {clip-path: circle(0% at top right);}
-    100% {clip-path: circle(250% at top right);}
-}
-@keyframes clipPathCircleClose {
-    0% {clip-path: circle(250% at top right);}
-    100% {clip-path: circle(0% at top right);}
-}
-@keyframes neon {
-    from {text-shadow:0 0 6px rgba(202,228,225,0.92),0 0 30px rgba(202,228,225,0.34),0 0 12px rgba(30,132,242,0.52),0 0 21px rgba(30,132,242,0.92),0 0 34px rgba(30,132,242,0.78),0 0 54px rgba(30,132,242,0.92);
-    }
-    to {text-shadow:0 0 6px rgba(202,228,225,0.98),0 0 30px rgba(202,228,225,0.42),0 0 12px rgba(30,132,242,0.58),0 0 22px rgba(30,132,242,0.84),0 0 38px rgba(30,132,242,0.88),0 0 60px rgba(30,132,242,1);
-    }
-}
-@keyframes neon-box {
-    from {box-shadow: 0 0 6px rgba(202, 228, 225, 0.92),0 0 24px rgba(202, 228, 225, 0.34), 0 0 9.6px rgba(30, 132, 242, 0.52), 0 0 16.8px rgba(30, 132, 242, 0.92), 0 0 27.2px rgba(30, 132, 242, 0.78), 0 0 43.2px rgba(30, 132, 242, 0.92);
-    }
-    to {box-shadow: 0 0 6px rgba(202, 228, 225, 0.98), 0 0 24px rgba(202, 228, 225, 0.42), 0 0 9.6px rgba(30, 132, 242, 0.58), 0 0 17.6px rgba(30, 132, 242, 0.84), 0 0 30.4px rgba(30, 132, 242, 0.88), 0 0 48px rgba(30, 132, 242, 1);
-    }
-}
-@keyframes creepshow {
-    0% {color:#131313;text-shadow:none;}
-    80% {color:#131313;text-shadow:none;}
-    90% {color:#00f0f0;}
-    100% {color:#131313;animation: neon .08s ease-in-out infinite alternate;}
-}
 @media (prefers-reduced-motion: reduce) {
     /* Remove all animations, transitions and smooth scroll
     for people that prefer not to see them */
@@ -71,4 +44,182 @@
     #tasten-steuerung {
     display:none;
     }
+}
+[id*="modalTrigger"] {
+    border-radius: 3px;
+    cursor: pointer;
+}
+[id*="modalTrigger"]:hover,
+[id*="modalTrigger"]:focus {
+    animation: neon-box 0.08s ease-in-out infinite alternate;
+    opacity: 0.85;
+    outline: none;
+    box-shadow:none;
+}
+dialog[open] {
+    -webkit-animation: show 250ms ease normal;
+    background-color: var(--shadow-grey);
+    border-radius: 0.3rem;
+    border: none;
+    padding: 1rem;
+    box-shadow:var(--space-motion);
+}
+dialog.hide {
+    -webkit-animation: hide 150ms ease normal;
+}
+dialog [id*="closeModal"] {
+    align-items: center;
+    background-color: transparent;
+    border-radius: 2px;
+    border: none;
+    bottom: 1rem;
+    color: var(--laser-blue);
+    display: flex;
+    font-size: 3rem;
+    height: 1em;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    right: 1rem;
+    text-align: center;
+    width: 1em;
+    cursor: pointer;
+}
+dialog [id*="closeModal"]:hover,
+dialog [id*="closeModal"]:focus {
+    animation: neon .08s ease-in-out infinite alternate;
+    color: var(--neon-pink);
+    border: none;
+    outline: none;
+    text-decoration: none;
+}
+dialog::backdrop {background-color: rgba(0, 0, 0, 0.5);
+}
+dialog > figure {margin:0;color: var(--matrix-green);}
+.jumi-font {
+    font-family: 'Sarpanch', sans-serif;
+    letter-spacing: 0.23rem;
+}
+.header-content > span#jumi-logo {
+    text-align: center;
+    vertical-align: middle;
+    margin-left: 2vw;
+}
+.header-content > #jumi-biz {
+    animation: neon .08s ease-in-out infinite alternate;
+    background-color: transparent;
+    color: var(--laser-blue);
+    cursor: pointer;
+    line-height: 1.337em;
+    text-align: center;
+    text-decoration: none;
+}
+.quiz-answers {
+    animation: neon .08s ease-in-out infinite alternate;
+    color: var(--neon-pink);
+    width: 100%;
+    text-align:match-parent;
+    font-family:'c64-Pro';
+    display:inline-block;
+    font-size: large;
+}
+details {
+    justify-content: space-around;
+    text-align:center;
+    padding: 0 0 2em;
+}
+details[open] > summary {
+    color: var(--laser-blue);
+    animation: none;
+    border: none;
+    outline: none;
+    box-shadow: none;
+}
+summary {
+    transform: translateZ(0);
+    color:var(--laser-blue);
+    border-radius: 0.5em;
+    border:1px solid #000;
+    line-height: 1.6em;
+    cursor: pointer;
+    display:inline-block;
+    margin: 1em 0 2em;
+    font-family:'c64-Pro';
+    font-size: small;
+    padding: 1.6em;
+    box-shadow:var(--ants-cry);
+    background-color:var(--high-ground);
+}
+summary:hover,
+summary:focus {
+    animation: neon-box .08s ease-in-out infinite alternate;
+    color: var(--neon-pink);
+    border: none;
+    outline: none;
+    box-shadow: none;
+}
+.list-icon {
+    align-items: center;
+    display: inline-block;
+    width: 30px;
+    padding: 0 4px;
+    margin: 0 18px;
+    text-align: left;
+    vertical-align: middle;
+}
+.flex {
+    display: flex;
+    gap: 0.6rem;
+}
+.flow > *:where(:not(:first-child)) {margin-top: 0.2rem;}
+.button-styled span {
+    background-color: #333;
+    border-radius: 3px;
+    border: 1px solid #000;
+    color: #fff;
+    display: inline-block;
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 0.65em;
+    font-weight: 700;
+    height: 18px;
+    line-height: 1.6em;
+    outline: none;
+    padding: 0.1em 0.6em 0.1em;
+    text-align: center;
+    text-shadow: none;
+    box-shadow:
+        0 3px 0 rgba(0,0,0,0.25),
+        inset 0 2px 0 rgba(170,170,170,0.8);
+}
+figure figcaption {
+    align-items: center;
+    color: var(--matrix-green);
+    display: flex;
+    flex-direction: column;
+    font-family: 'Sarpanch', sans-serif;
+    font-size: 1.2rem;
+    justify-content: center;
+    text-shadow: 1.5px 2px #000;
+}
+figure > img {border-radius: 0.5rem;}
+caption {
+    caption-side: top;
+    margin: 0.3rem;
+    font-weight: bold;
+    color: var(--matrix-green);}
+}
+#analyzer {
+    display:flex;
+    justify-content:center;
+}
+#banner {
+    align-items: center;
+    color: var(--shadow-grey);
+    animation: creepshow 60s infinite;
+    display: flex;
+    font-size:small;
+    height: 100vh;
+    justify-content: center;
+    margin: 0;
 }
