--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,170 +1,380 @@
-
-[id*="modalTrigger"] {
-    border-radius: 3px;
-    cursor: pointer;
+@font-face {
+font-family:'Sarpanch';font-style:normal;src:
+url('../fonts/sarpanch-v11-latin-regular.woff2')
+/* Super Modern Browsers */ format('woff2'),
+url('../fonts/sarpanch-v11-latin-regular.woff')
+/* Modern Browsers */ format('woff'),
+url('../fonts/sarpanch-v11-latin-regular.ttf')
+/* Safari, Android, iOS */ format('truetype'),
+url('../fonts/sarpanch-v11-latin-regular.svg#Sarpanch') /* Legacy iOS */ format('svg');
 }
-[id*="modalTrigger"]:hover,
-[id*="modalTrigger"]:focus {
-    animation: neon-box .08s ease-in-out infinite alternate;
-    opacity: 0.75;
+@font-face {
+font-family:'c64-mono';font-style:normal;src:
+url('../fonts/C64_Pro_Mono-STYLE.woff2')
+/* Super Modern Browsers */ format('woff2'),
+url('../fonts/C64_Pro_Mono-STYLE.woff')
+/* Modern Browsers */ format('woff'),
+url('../fonts/C64_Pro_Mono-STYLE.ttf')
+/* Safari, Android, iOS */ format('truetype');
+}
+@font-face {
+font-family:'c64-elite';font-style:normal;src:
+url('../fonts/C64_Elite_Mono_v1.0-STYLE.ttf')
+/* Safari, Android, iOS */ format('truetype');
+}
+@font-face {
+font-family:'c64-Pro';font-style:normal;src:
+url('../fonts/C64_Pro-STYLE.woff2')
+/* Super Modern Browsers */ format('woff2'),
+url('../fonts/C64_Pro-STYLE.woff')
+/* Modern Browsers */ format('woff'),
+url('../fonts/C64_Pro-STYLE.ttf')
+/* Safari, Android, iOS */ format('truetype');
+}
+/* Colors for Words */
+.r{color:#FF1337 !important }
+.g{color:#A3B8C8 !important }
+.b{color:#1337FF !important }
+.y{color:#FFFF00 !important }
+.c{color:#119988 !important }
+.m{color:#FF00FF !important }
+.o{color:#FFA500 !important }
+.p{color:var(--neon-pink) !important }
+body::-webkit-scrollbar {
+/* Scrollleiste ausblenden */
+    background-color: #000;
+    display: none;
+    width: 3px;
+    min-height: 100vh;
+}
+ul, ol {
+    list-style: none;
+    font-size:x-small;
+    padding-left:0;
+}
+table {
+    justify-content: space-around;
+    position: relative;
+    width: min(max-content);
+    text-align: center;
+    margin: 1rem;
+    padding:1rem 0;
+    border: 1px solid #000;
+    border-radius:0.5rem;
+    background-color:var(--high-ground);
+    table-layout: fixed;
     outline: none;
+    box-shadow:var(--ants-cry);
 }
-dialog[open] {
+//table > * {}
+.bsp-txt > * {text-align:left;}
+section {
+    justify-content: space-around;
+    position: relative;
+    width: 100%;
+    text-align: justify;
+}
+th {
+    color:var(--pipi-white);
+	font-weight: 50;
+    padding:0 1.6vw;
+}
+q, cite, figcaption {
+    font-size:x-small;
+    width: 100%;
+    line-height: 0;
+    text-align: center;
+}
+code {
+    display: inline-table;
+    font-family: 'Source Code Pro', monospace;
+    color: var(--matrix-green);
+    text-align: left;
+    background-color: #000;
+    text-shadow: none;
+    max-width:max-content;
+    padding-left: 0.6em;
+    padding-right: 0.6em;
+    font-size: small;
+}
+mark {
+    padding-left: 0.2em;
+    padding-right: 0.2em;
+    background-color: revert;
+    color: revert;
+    font-size: 0.85em;
+}
+header {
+    align-items: center;
     background-color: var(--shadow-grey);
-    border-radius: 0.3rem;
-    border: none;
-    padding: 1rem;
+    display: flex;
+    font-family: 'Sarpanch', sans-serif;
+    font-size: 1.8rem;
+    height: 55px;
+    justify-content: space-between;
+    letter-spacing: 0.23rem;
+    position: relative;
+    text-shadow: 1.5px 2px #000;
     box-shadow:var(--space-motion);
 }
-dialog [id*="closeModal"] {
+.header-content {
+    transform: translateZ(0);
     align-items: center;
-    background-color: transparent;
-    border-radius: 2px;
-    border: none;
-    bottom: 1rem;
+    display: inline-block;
+    vertical-align: middle;
+    transform: translateZ(0);
+    text-shadow: 1.5px 2px #000;
+    animation: neon .08s ease-in-out infinite alternate;
+}
+header::after {
+    clear: both;
+    content: "";
+    display: block;
+}
+header a {
     color: var(--laser-blue);
-    display: flex;
-    font-size: 3rem;
-    height: 1em;
-    justify-content: center;
+    text-decoration: none;
+}
+header a:hover,
+header a:focus {
+    animation: neon .08s ease-in-out infinite alternate;
+    outline: none;
+    color: var(--neon-pink);
+    text-shadow: none;
+}
+.menu-list {
+    transform: translateZ(0);
+    background-color: var(--shadow-grey);
+    border-bottom-left-radius: 0.5rem;
+    list-style: none;
     margin: 0;
     padding: 0;
     position: absolute;
-    right: 1rem;
-    text-align: center;
-    transition: all ease-in-out 200ms;
-    width: 1em;
-    cursor: pointer;
+    right: 0;
+    top: 54px;
+    transition: clip-path ease-in-out 350ms;
+    z-index: 1;
+    box-shadow:var(--space-motion);
 }
-dialog [id*="closeModal"]:hover,
-dialog [id*="closeModal"]:focus {
-    animation: neon .08s ease-in-out infinite alternate;
-    border: none;
-    outline: none;
-    text-decoration: none;
-}
-dialog::backdrop {background-color: rgba(0, 0, 0, 0.5);
-}
-dialog > figure {margin:0;color: var(--matrix-green);}
-.jumi-font {
-    font-family: 'Sarpanch', sans-serif;
-    letter-spacing: 0.23rem;
-}
-.header-content > span#jumi-logo {
-    text-align: center;
-    vertical-align: middle;
-    margin-left: 2vw;
-}
-.header-content > #jumi-biz {
-    animation: neon .08s ease-in-out infinite alternate;
+.menu-button {
     background-color: transparent;
-    color: var(--laser-blue);
+    border-radius: 2px;
+    border: 0;
     cursor: pointer;
-    line-height: 1.337em;
-    text-align: center;
-    text-decoration: none;
+    margin: 8px;
+    padding: 18px;
+    position: absolute;
+    right: 0;
+    top: 0;
 }
-.quiz-answers {
-    animation: neon .08s ease-in-out infinite alternate;
-    color: var(--neon-pink);
-    width: 100%;
-    text-align:match-parent;
-    font-family:'c64-Pro';
-    display:inline-block;
-    font-size: large;
+.menu-button:hover * {
+    background-color: var(--neon-pink);
 }
-details {
-    justify-content: space-around;
-    text-align:center;
-    padding: 0 0 2em;
+.hidden-menu {
+    clip-path: inset(50%);
+    clip: rect(0, 0, 0, 0);
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    box-shadow:var(--space-motion);
+    white-space: nowrap;
+    width: 1px;
 }
-details[open] > summary {
-    color: var(--laser-blue);
-    animation: none;
-    border: none;
-    outline: none;
-    box-shadow: none;
+.menu-icon,
+.menu-icon::before,
+.menu-icon::after {
+     background-color: var(--laser-blue);
+     border-radius: 2px;
+     content: "";
+     display: block;
+     height: 3px;
+     transition: all ease-in-out 400ms;
+     width: 25px;
 }
-summary {
-    color:var(--laser-blue);
-    border-radius: 0.5em;
-    border:1px solid #000;
-    line-height: 1.6em;
-    cursor: pointer;
-    display:inline-block;
-    margin: 1em 0 2em;
-    font-family:'c64-Pro';
-    font-size: small;
-    padding: 1.6em;
-    box-shadow:var(--ants-cry);
-    background-color:var(--high-ground);
+.menu-icon::before {
+     transform: translateY(-6px);
 }
-summary:hover,
-summary:focus {
+.menu-icon::after {
+     transform: translateY(3px);
+}
+[aria-expanded="true"] .menu-icon {
+     transform: rotate(45deg);
     animation: neon-box .08s ease-in-out infinite alternate;
-    color: var(--neon-pink);
-    border: none;
-    outline: none;
-    box-shadow: none;
 }
-.list-icon {
-    align-items: center;
-    display: inline-block;
-    padding:8px;
-    text-align: left;
-    vertical-align: middle;
+[aria-expanded="true"] .menu-icon::before {
+     opacity: 0;
+    animation: neon-box .08s ease-in-out infinite alternate;
 }
-.flex {
-    display: flex;
-    gap: 0.6rem;
+[aria-expanded="true"] .menu-icon::after {
+    transform: translateY(-3px) rotate(-90deg);
+    animation: neon-box .08s ease-in-out infinite alternate;
 }
-.flow > *:where(:not(:first-child)) {margin-top: 0.2rem;}
-.button-styled span {
-    background-color: #333;
-    border-radius: 3px;
-    border: 1px solid #000;
-    color: #fff;
-    display: inline-block;
-    font-family: Helvetica, Arial, sans-serif;
-    font-size: 0.65em;
-    font-weight: 700;
-    height: 18px;
-    line-height: 1.6em;
-    outline: none;
-    padding: 0.1em 0.6em 0.1em;
-    text-align: center;
-    text-shadow: none;
-    box-shadow:
-        0 3px 0 rgba(0,0,0,0.25),
-        inset 0 2px 0 rgba(170,170,170,0.8);
-}
-figure figcaption {
-    align-items: center;
-    color: var(--matrix-green);
-    display: flex;
-    flex-direction: column;
+.menu-list a {
+    border-bottom-left-radius: 0.35rem;
+    transform: scaleY(1.2);
+    color: var(--laser-blue);
+    display: block;
     font-family: 'Sarpanch', sans-serif;
-    font-size: 1.2rem;
-    justify-content: center;
+    font-size: 24px;
+    margin: 0 24px 0 0;
+    padding: 20px 1vw;
+    text-align: left;
+    text-decoration: none;
+    text-transform: uppercase;
     text-shadow: 1.5px 2px #000;
 }
-figure > img {border-radius: 0.5rem;}
-caption {
-    caption-side: top;
-    margin: 0.3rem;
-    font-weight: bold;
-    color: var(--matrix-green);}
+.menu-list li:last-child > a{
+    font-size:14px;
+    padding: 10px 0 10px 9px;
+    text-transform: lowercase;
 }
-#analyzer {
-    display:flex;
-    justify-content:center;
+.menu-list li:last-child i{
+    padding: 8px 10px 8px 0px;
+
 }
-#banner {
+.menu-list[data-state="opened"] {
+    animation: clipPathCircleOpen 300ms ease-in-out forwards;
+    display: block;
+}
+.menu-list[data-state="closing"] {
+    animation: clipPathCircleClose 300ms ease-in-out forwards;
+}
+.menu-list[data-state="closed"] {
+    display: none;
+}
+main {
+    background-color: #000;
+    font-family: Arial, Verdana, Helvetica, sans-serif;
+    font-size:var(--base-font-size);
+    letter-spacing: 0.28vw;
+    padding: 2vw 0 8vw;
+    min-height:89vh;
+}
+.grid-container {
+    display: grid;
+    gap: 1vh;
+    grid-auto-columns: 1fr;
+    grid-template-areas:
+    'one' 'two' 'three' 'four' 'five';
+    grid-template-columns:
+    repeat(auto-fit, minmax(200px, 1fr));
+    justify-content: space-around;
+    margin-inline: auto;
+    width: min(97vw, 97%);
+}
+.content {
     align-items: center;
-    animation: creepshow 60s infinite;
+    background-color: var(--shadow-grey);
+    border-radius: 0.35rem;
+    box-shadow:var(--space-motion);
+    color:var(--pipi-white);
+    justify-content: space-evenly;
+    line-height: 1.337em;
+    padding: 0 1.37vh 1.6rem;
+    position: relative;
+    text-shadow: 1.5px 2px #000;
+    width: 100%;
+}
+.content:nth-child(1) {grid-area: one;}
+.content:nth-child(2) {grid-area: two;}
+.content:nth-child(3) {grid-area: three;}
+.content:nth-child(4) {grid-area: four;}
+.content:nth-child(5) {grid-area: five;}
+.content h1 {
+    transform: translateZ(0);
+    animation: neon .08s ease-in-out infinite alternate;
+    color: var(--matrix-green);
+    font-family: 'Sarpanch', sans-serif;
+    width: 100%; text-align: center;
+    letter-spacing: 0.28vw;
+}
+.content h2 {
+    color: var(--matrix-green);
+    width: 100%; text-align: center;
+}
+.content h3 {
+    color: var(--matrix-green);
+    width: 100%; text-align: center;}
+.content h4 {width: 100%; text-align: center;color: var(--matrix-green);}
+.content p {
+    color:var(--pipi-white);
+}
+.content a {
+    color: var(--laser-blue);
+    text-decoration: none;
+    font-weight: bold;
+}
+.content b {color:#FFF;}
+.content a:hover,
+.content a:focus {
+    animation: neon .08s ease-in-out infinite alternate;
+    color: var(--neon-pink);
+    text-shadow: none;
+    border: none;
+    outline: none;
+}
+.content hgroup {
+    width:100%;
+    text-align:center;
+}
+.content img {
+    width: 100%;
+    box-shadow:var(--ants-cry);
+}
+footer {
+    align-items: center;
+    background-color: var(--shadow-grey);
     display: flex;
-    font-size:small;
-    height: 100vh;
-    justify-content: center;
-    margin: 0;
+    justify-content: space-around;
+    margin-top: auto;
+    position: absolute;
+    text-align: center;
+    width: 100%;
+}
+footer .footer-container {
+    display: flex;
+    justify-content: space-between;
+    padding: 2vh 5vw 12vh 3vw;
+    vertical-align: middle;
+    width: 100%;
+    height:100%;
+}
+.leftside-profil-icons,
+.rightside-site-features {
+    display: flex;
+    justify-content: space-between;
+    cursor: pointer;
+}
+.leftside-profil-icons > * {
+    left: 0;
+    margin-right: 3vw;
+}
+.rightside-site-features > * {
+    right: 0;
+    margin-left: 3vw;
+}
+footer #instagram-link {
+    cursor: pointer;
+    width:30px;
+    height:30px;
+}
+footer #contact-email {
+    animation: neon .08s ease-in-out infinite alternate;
+    background-color: var(--shadow-grey);
+    color: var(--laser-blue);
+    font-family: 'Sarpanch', sans-serif;
+    font-size: 1.337rem;
+    font-weight: 200;
+    letter-spacing: 0.12em;
+    text-decoration: none;
+}
+footer #export-icon {
+    cursor: pointer;
+}
+footer #goto-top {
+    cursor: pointer;
+}
+#UAP > *{
+    animation: neon .08s ease-in-out infinite alternate;
+    color: var(--neon-pink);
 }
